--- a/configure.ac
+++ b/configure.ac
@@ -82,6 +82,7 @@ AS_IF([test "x$enable_oem_ibm" == "xyes"], [
 
 AC_DEFINE(BIOS_JSONS_DIR, "/etc/default/obmc/pldm/bios", [Directory housing the json files for BIOS tables])
 AC_DEFINE(BIOS_TABLES_DIR, "/var/lib/pldm/bios", [Directory housing actual BIOS tables])
+AC_DEFINE(PEL_TEMP_DIR, "/var/lib/pldm/pel", [Directory housing the pel buffers received from host until committed])
 
 # Create configured output
 AC_CONFIG_FILES([Makefile libpldm/Makefile libpldmresponder/Makefile test/Makefile tool/Makefile])
